docker-registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-registry
  name: docker-registry-svc
  namespace: pipeline
spec:
  type: NodePort
  selector:
    app: docker-registry
    release: docker-registry
  ports:
    - name: docker-registry-http
      port: 80
      protocol: TCP
      targetPort: 5000
    - name: docker-registry-https
      port: 443
      protocol: TCP
      targetPort: 5000
