jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-registry
  name: registry-svc
  namespace: pipeline-ns
spec:
  type: NodePort
  selector:
    app: docker-registry
    release: docker-registry
  ports:
    - name: registry-http
      port: 80
      protocol: TCP
      targetPort: 5000
    - name: registry-https
      port: 443
      protocol: TCP
      targetPort: 5000
