nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: nginx-ing
  namespace: pipeline-ns
spec:
  tls:
    - hosts:
        - registry.rudasoft.com
      secretName: rudasoft-secret
  rules:
    - host: registry.rudasoft.com
      http:
        paths:
          - backend:
              serviceName: registry-svc
              servicePort: 80
            path: /
