pipeline-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: pipeline-ing
  namespace: pipeline
spec:
  tls:
    - hosts:
        - pipeline.internal
      secretName: pipeline-tls-secret
  rules:
    - host: registry.pipeline.internal
      http:
        paths:
          - backend:
              serviceName: docker-registry-svc
              servicePort: 80
            path: /
    - host: jenkins.pipeline.internal
      http:
        paths:
          - backend:
              serviceName: jenkins-svc
              servicePort: 80
            path: /
